--- a/WPFCompTest/MainWindow.xaml
+++ b/WPFCompTest/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFCompTest"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="WPF Capture Sample" Height="450" Width="800"
+        Loaded="Window_Loaded" MouseDoubleClick="Window_MouseDoubleClick">
     <Grid>
         
     </Grid>
