--- a/WPFCaptureSample/MainWindow.xaml
+++ b/WPFCaptureSample/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="WPFCompTest.MainWindow"
+﻿<Window x:Class="WPFCaptureSample.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPFCompTest"
+        xmlns:local="clr-namespace:WPFCaptureSample"
         mc:Ignorable="d"
         Title="WPF Capture Sample" Height="450" Width="800"
         Loaded="Window_Loaded" MouseDoubleClick="Window_MouseDoubleClick">
