--- a/WPFCaptureSample/MainWindow.xaml
+++ b/WPFCaptureSample/MainWindow.xaml
@@ -14,6 +14,10 @@
         </Grid.ColumnDefinitions>
 
         <Grid x:Name="ControlsGrid" Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
             <StackPanel Margin="10">
                 <Button x:Name="PickerButton" Content="Use Picker" Click="PickerButton_Click" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10" />
                 <ComboBox x:Name="WindowComboBox" Margin="10" SelectionChanged="WindowComboBox_SelectionChanged">
@@ -24,10 +28,12 @@
                     </ComboBox.ItemTemplate>
                 </ComboBox>
             </StackPanel>
+            <Button x:Name="StopButton" Grid.Row="1" Content="Stop Capturing" Click="StopButton_Click" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10" />
+
         </Grid>
 
         <Grid Grid.Column="1">
-            <Rectangle Fill="WhiteSmoke" MouseUp="SampleArea_MouseUp" />
+            <Rectangle Fill="WhiteSmoke" />
         </Grid>
         
     </Grid>
